--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -10,42 +10,13 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 
-    <title>LAC: monitored devices</title>
+    <title>LAC</title>
   </head>
   <body>
-    <div class="container-fluid">
-
-      <!-- TITLE -->
-      <h1 class="text-center">LAC</h1>
-      <h6 class="text-center"><a href="https://github.com/steledama/lac">open source</a> snmp agent for <a href="https://www.zabbix.com/">zabbix</a></h6>
-
-      <!-- NAVBAR -->
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">LAC</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Monitored devices</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="newProfile.html">New profile</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled" href="#">Edit profile</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-
+      <%- include('../partials/header.ejs') %>
+      <%- include('../partials/errorMessage.ejs') %>
       <%- body %> 
-    </div>
 
-    
     <!-- Optional JavaScript; choose one of the two! -->
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
