--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -14,7 +14,7 @@
   </head>
   <body>
       <%- include('../partials/header.ejs') %>
-      <%- include('../partials/errorMessage.ejs') %>
+      <!-- mongo message -->
       <%- body %> 
 
     <!-- Optional JavaScript; choose one of the two! -->
